# componentor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
assemblies/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
assemblies/migrations/: 0001_initial.py  0002_alter_assemblypart_part_count_and_more.py
assemblies/templates/assemblies/: assembly_delete.html  assembly_detail.html  assembly_form.html  assembly_list.html
componentor/: mixins.py  settings.py  urls.py  views.py
etc/nginx/: Dockerfile  nginx.conf
materials/: admin.py  factories.py  forms.py  tests.py  urls.py  views.py
materials/migrations/: 0001_initial.py
materials/templates/materials/: material_delete.html  material_detail.html  material_form.html  material_list.html
nginx/: Dockerfile  nginx.conf
parts/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
parts/migrations/: 0001_initial.py
parts/templates/parts/: part_delete.html  part_detail.html  part_form.html  part_list.html
templates/: base.html  index.html
templates/components/: messages.html  navbar.html
